index.html title 수정

--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://tssu106.github.io/movie_app"
+  "homepage": "https://tssu106.github.io/movie_app/"
 }
